Add basic webserver support

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(GLOB srcs src/*.c)
-file(GLOB_RECURSE webfiles webroot/*)
+file(GLOB_RECURSE webfiles LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} webroot/*)
 
 idf_component_register(SRCS ${srcs}
 		       INCLUDE_DIRS "src"
