--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "components/esp-idf-pixelflut-component"]
 	path = components/esp-idf-pixelflut-component
 	url = https://github.com/TobleMiner/esp-idf-pixelflut-component
+[submodule "components/esp-idf-gif-component"]
+	path = components/esp-idf-gif-component
+	url = https://github.com/TobleMiner/esp-idf-gif-component
