Support simple, on-demand gui rendering

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB srcs src/*.c)
-file(GLOB_RECURSE webfiles LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} webroot/*)
+file(GLOB_RECURSE webfiles LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} assets/webroot/*)
+file(GLOB_RECURSE bitmaps LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} assets/bitmaps/*)
 
 idf_component_register(SRCS ${srcs}
 		       INCLUDE_DIRS "src"
-		       EMBED_FILES ${webfiles})
+		       EMBED_FILES ${webfiles} ${bitmaps})
