--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "components/esp-idf-gif-component"]
 	path = components/esp-idf-gif-component
 	url = https://github.com/TobleMiner/esp-idf-gif-component
+[submodule "components/esp-idf-qr-code-generator-component"]
+	path = components/esp-idf-qr-code-generator-component
+	url = https://github.com/TobleMiner/esp-idf-qr-code-generator-component.git
