Add font rendering capability

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,8 @@
 file(GLOB srcs src/*.c)
 file(GLOB_RECURSE webfiles LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} assets/webroot/*)
 file(GLOB_RECURSE bitmaps LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} assets/bitmaps/*)
+file(GLOB_RECURSE fonts LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR} assets/fonts/*)
 
 idf_component_register(SRCS ${srcs}
 		       INCLUDE_DIRS "src"
-		       EMBED_FILES ${webfiles} ${bitmaps})
+		       EMBED_FILES ${webfiles} ${bitmaps} ${fonts})
