cmake: add compile time definition describing current git head

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -6,3 +6,6 @@ file(GLOB_RECURSE fonts LIST_DIRECTORIES false RELATIVE ${CMAKE_CURRENT_LIST_DIR
 idf_component_register(SRCS ${srcs}
 		       INCLUDE_DIRS "src"
 		       EMBED_FILES ${webfiles} ${bitmaps} ${fonts})
+
+execute_process(COMMAND git describe --always --dirty OUTPUT_VARIABLE badge_app_version)
+add_compile_definitions(BADGE_APP_VERSION=${badge_app_version})
